# funcode

./: CLAUDE.md  Cargo.toml  README.md  nul
crates/agent/: Cargo.toml
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  lib.rs  tool.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/event/: Cargo.toml
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  transport.rs
crates/permission/: Cargo.toml
crates/permission/src/: lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  models.rs  provider.rs
crates/server/: Cargo.toml
crates/server/src/: router.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  fs.rs  lib.rs  shell.rs  tool.rs  write.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
docs/: coding-assistant-design.md  design.md
docs/adr/: 0001-unified-message-model.md  0002-model-provider-trait.md  0003-event-bus-broadcast.md  0004-unified-op-enum.md  0005-stateless-session.md  0006-token-budget-truncation.md  0007-tool-trait-boxfuture.md  0008-cancel-token-stream-assembly.md  0009-canonical-item-model.md  README.md  template.md
docs/claude-code/: message-layers.md  user-input-data-flow.md
docs/issue/: 2026-04-26-cancel-token-followups.md
src/: agent.rs  app.rs  approval.rs  bus.rs  cli.rs  config.rs  context.rs  errors.rs  fs.rs  git.rs  main.rs  memory.rs  model.rs  patch.rs  planner.rs  repo.rs  sandbox.rs  session.rs  shell.rs  telemetry.rs  tools.rs  types.rs  utils.rs
