[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
async-trait.workspace = true
provider = { path = "../provider" }
