[package]
name = "provider"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
wiremock = "0.6"
dotenvy = "0.15"
